--- a/assignment-11/coding/package.json
+++ b/assignment-11/coding/package.json
@@ -1,7 +1,6 @@
 {
   "name": "coding",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -18,5 +17,6 @@
     "postcss": "^8.4.29",
     "process": "^0.11.10",
     "tailwindcss": "^3.3.3"
-  }
+  },
+  "description": ""
 }
