--- a/assignment-13/coding/package.json
+++ b/assignment-13/coding/package.json
@@ -1,30 +1,32 @@
 {
   "name": "coding",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "",
+  "main": "tailwind.config.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@reduxjs/toolkit": "^1.9.5",
-    "i": "^0.3.7",
+    "@parcel/config-default": "^2.9.3",
+    "@reduxjs/toolkit": "^1.9.6",
+    "parcel": "^2.9.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.2",
-    "react-router-dom": "^6.14.2",
-    "redux": "^4.2.1"
+    "react-router-dom": "^6.16.0"
   },
   "devDependencies": {
     "@babel/core": "^7.23.0",
     "@babel/preset-env": "^7.22.20",
+    "@babel/preset-react": "^7.22.15",
+    "@testing-library/jest-dom": "github:testing-library/jest-dom",
     "@testing-library/react": "^14.0.0",
     "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
-    "postcss": "^8.4.29",
+    "jest-environment-jsdom": "^29.7.0",
     "process": "^0.11.10",
     "tailwindcss": "^3.3.3"
-  },
-  "description": ""
+  }
 }
